<resources>
    <string name="app_name" translatable="false">Qash</string>
    <string name="app_description">Quick Qash (QR-Code as a Cash)</string>
    <string name="developer">Developer</string>
    <string name="gravicodev">Gravicodev</string>
    <string name="gravicodev_url">https://gravicodev.id</string>
    <string name="bca">BCA</string>

    <!-- Menu -->
    <string name="logout">Log Out</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!-- Error Message -->
    <string name="err_msg_userid">Invalid User ID</string>
    <string name="err_msg_pin">Pin number can\'t be empty</string>
    <string name="err_msg_min_pin">Pin number must be 6 character</string>
    <string name="err_msg_qrname">QR Name can\'t be empty</string>
    <string name="err_msg_desc">Description can\'t be empty</string>
    <string name="err_msg_scanbalance">Balance can\'t be empty</string>
    <string name="err_msg_qrbalance">QR Balance can\'t be empty</string>
    <string name="err_msg_min_qrbalance">QR Balance can\'t less than Rp 10.000</string>

    <!-- List Item -->
    <string name="qr_name">QR-Code Name</string>
    <string name="qr_balance">0</string>
    <string name="qr_rp">Rp</string>
    <string name="qr_date">1 hour ago</string>
    <string name="qr_minus_balance">- Rp </string>
    <string name="qr_plus_balance">+ Rp </string>
    <string name="qr_desc">Description : </string>

    <string name="qr_created">Created at</string>
    <string name="qr_expired">Expired at</string>
    <string name="qr_info_balance">Balance : Rp </string>
    <string name="qr_info_status">Status : </string>
    <string name="qr_info_value_status">Active</string>
    <string name="qr_delete">Delete</string>
    <string name="qr_show">Show QR-Code</string>

    <string name="list_info">List more information</string>
    <string name="empty_qr">Your QR-Code list is still empty</string>
    <string name="empty_history">Your transaction list is still empty</string>

    <!-- Slider Activity -->
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Got It</string>

    <string name="slide_1_title">Banking Account</string>
    <string name="slide_1_desc">Ease of managing your banking account and QR-Code.</string>

    <string name="slide_2_title">Generate QR-Code</string>
    <string name="slide_2_desc">Create your QR-Code with as much balance as you want.</string>

    <string name="slide_3_title">Scan QR-Code</string>
    <string name="slide_3_desc">Use your QR-Code in every transaction with just a simple scan.</string>

    <string name="slide_4_title">QR-Code History</string>
    <string name="slide_4_desc">Know all your QR-Code transaction from time to time.</string>

    <!-- Login Activity -->
    <string name="login">Log In</string>
    <string name="hint_userid">User ID</string>
    <string name="hint_pin">Pin Number</string>
    <string name="howto_signup">How to sign up ?</string>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <!--User information-->
    <string name="email">Email</string>
    <string name="id">ID User</string>
    <string name="fullname">Fullname</string>
    <string name="accnum">Account Number</string>
    <string name="balanceacc">Account Balance</string>
    <string name="deviceid">Device ID</string>

    <!-- Home Fragment -->
    <string name="name_nasabah">Nasabah Name</string>
    <string name="balance_nasabah">Balance</string>
    <string name="circle_nasabah">Initial Name</string>
    <string name="circle_initial">Q</string>
    <string name="current_balance">Current Qash Balance</string>

    <!-- History Fragment -->
    <string name="history_qash">Qash History</string>

    <!-- Generate QR Frament -->
    <string name="generate_qash">Generate Qash</string>
    <string name="generate">Generate</string>
    <string name="generate_name">QR-Code Name</string>
    <string name="generate_balance">QR-Code Balance</string>

    <!-- Scan QR Fragment -->
    <string name="scan_qash">Scan Qash</string>
    <string name="scan_balance">Balance</string>
    <string name="scan_ket">Description</string>
    <string name="scan">Scan Qash</string>
    <string name="accepted">Accepted</string>
    <string name="ammount_accepted">Rp 0</string>
    <string name="scan_template">Template</string>

    <!-- More Fragment -->
    <string name="more">More Qash</string>
    <string name="information_qash">Qash Information</string>

    <!-- Information QR Activity -->
    <string name="list_qash">Qash List</string>

    <!-- Account Statement Activity -->
    <string name="accstatement">Account Statement</string>
    <string name="period">Period</string>
    <string name="start_balance">Start Balance</string>
    <string name="end_balance">End Balance</string>
    <string name="credit_accstatement">Credit</string>
    <string name="debet_accstatement">Debet</string>
    <string name="qash_credit_accstatement">Qash Credit</string>
    <string name="qash_debet_accstatement">Qash Debet</string>
    <string name="circle_accstatement">Description Qash</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="trailer">Trailer</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="transaction_type">Q</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="branch_code">Branch Code</string>

    <!-- Promotion Activity -->
    <string name="promotion">Promotion</string>
    <string name="title_promotion">Qash Promotion</string>
    <string name="description_promotion">Qash Promotion Today</string>
    <string name="date_promotion">1 day left</string>
    <string name="img_desc_promotion">Icon Promotion</string>

    <!-- ATM Place Activity-->
    <string name="atm_place">ATM Place</string>
    <string name="nearest_atm">Nearest ATM</string>
    <string name="title_atm">ATM</string>
    <string name="address_atm">ATM Address</string>
    <string name="distance_atm">1 km</string>
    <string name="img_desc_atm">Icon ATM</string>

    <!-- Store Place Acitivity -->
    <string name="store_place">Store Place</string>
    <string name="nearest_store">Nearest Store</string>
    <string name="title_store">Store</string>
    <string name="address_store">Store Address</string>
    <string name="distance_store">1 km</string>
    <string name="img_desc_store">Icon Store</string>

    <!-- Template Setting Activity -->
    <string name="template_setting">Template Setting</string>
    <string name="new_template">Add New Template</string>
    <string name="create_template">Create Template</string>
    <string name="list_template">List Template</string>

    <!-- Update Template Acitivity -->
    <string name="update_template">Update Template</string>

    <!-- Show QR Code Activity -->
    <string name="show_qr">QR-Code</string>
    <string name="qash_qrcode">QASH QR-Code</string>
    <string name="save_qr">Save QR-Code</string>
    <string name="qash_qrcode_desc">QR-Code</string>

    <!-- QR Code Reader-->
    <string name="qash_reader">Qash Reader</string>

</resources>
