<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/nameInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/balanceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameInfo"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/qr_info_balance"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/balanceValueInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameInfo"
            android:layout_toEndOf="@id/balanceInfo"
            android:layout_toRightOf="@id/balanceInfo"
            android:text="@string/qr_balance"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/statusInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/balanceInfo"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/qr_info_status"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/statusValueInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/balanceValueInfo"
            android:layout_toEndOf="@id/statusInfo"
            android:layout_toRightOf="@id/statusInfo"
            android:text="@string/qr_info_value_status"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/createdInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/statusInfo"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/qr_created" />

        <TextView
            android:id="@+id/createdValueInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/statusValueInfo"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/createdInfo"
            android:layout_toRightOf="@id/createdInfo"
            android:text="@string/qr_date" />

        <TextView
            android:id="@+id/expiredInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/createdInfo"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/qr_expired" />

        <TextView
            android:id="@+id/expiredValueInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/createdValueInfo"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_toEndOf="@id/expiredInfo"
            android:layout_toRightOf="@id/expiredInfo"
            android:text="@string/qr_date" />

        <Button
            android:id="@+id/deleteQr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/expiredInfo"
            android:background="@null"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/qr_delete"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#FF0000" />

        <Button
            android:id="@+id/showQr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/expiredValueInfo"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/deleteQr"
            android:layout_toRightOf="@id/deleteQr"
            android:background="@null"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/qr_show"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

</LinearLayout>