<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/listInformationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_name"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/listInformationCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listInformationName"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/qr_created" />

    <TextView
        android:id="@+id/listInformationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listInformationName"
        android:layout_toEndOf="@id/listInformationCreated"
        android:layout_toRightOf="@id/listInformationCreated"
        android:text="@string/qr_date" />

    <ImageView
        android:id="@+id/listInformationExpand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_expand_more"
        android:contentDescription="@string/information_qash"/>

</RelativeLayout>