<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imgATM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/img_desc_atm"
        android:padding="3dp"
        android:src="@drawable/ic_atm" />

    <TextView
        android:id="@+id/titleATM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/imgATM"
        android:layout_toRightOf="@id/imgATM"
        android:maxLines="1"
        android:text="@string/title_atm"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/addressATM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleATM"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/imgATM"
        android:layout_toRightOf="@id/imgATM"
        android:text="@string/address_atm" />

    <TextView
        android:id="@+id/distanceATM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/distance_atm" />

</RelativeLayout>