<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imgStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/img_desc_store"
        android:padding="3dp"
        android:src="@drawable/ic_grocery" />

    <TextView
        android:id="@+id/titleStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/imgStore"
        android:layout_toRightOf="@id/imgStore"
        android:maxLines="1"
        android:text="@string/title_store"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/addressStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleStore"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/imgStore"
        android:layout_toRightOf="@id/imgStore"
        android:text="@string/address_store" />

    <TextView
        android:id="@+id/distanceStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/distance_store" />

</RelativeLayout>