<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gravicodev.qash.Activity.ShowQRCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_qrcode"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/show_qr"
            app:titleTextColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/information_qash"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/qrcode_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qr_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/qrcode_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qr_balance" />

            <ImageView
                android:id="@+id/qr_pict"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/qash_qrcode_desc"
                android:src="@drawable/qash_qr" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSaveQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/save_qr"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white" />

</android.support.design.widget.CoordinatorLayout>