<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imgPromotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/img_desc_promotion"
        android:padding="3dp"
        android:src="@drawable/ic_tag" />

    <TextView
        android:id="@+id/titlePromotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/imgPromotion"
        android:layout_toRightOf="@id/imgPromotion"
        android:maxLines="1"
        android:text="@string/title_promotion"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/descriptionPromotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlePromotion"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/imgPromotion"
        android:layout_toRightOf="@id/imgPromotion"
        android:text="@string/description_promotion" />

    <TextView
        android:id="@+id/datePromotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/date_promotion" />

</RelativeLayout>