<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/histQrName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_name"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/histQrBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/histQrName"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/qr_balance"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/histQrDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/histQrBalance"
        android:text="@string/qr_date" />

</RelativeLayout>