<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efefef"
        android:padding="8dp">

        <FrameLayout
            android:id="@+id/circleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/circle_nasabah"
                android:src="@drawable/ic_circle" />

            <TextView
                android:id="@+id/initialName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/circle_initial"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white" />

        </FrameLayout>

        <TextView
            android:id="@+id/nameNasabah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/circleName"
            android:layout_toRightOf="@id/circleName"
            android:text="@string/name_nasabah"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/balanceNasabah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameNasabah"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/circleName"
            android:layout_toRightOf="@id/circleName"
            android:text="@string/balance_nasabah" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:minHeight="1dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/current_balance"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorPrimary" />

    <FrameLayout
        android:id="@+id/emptyCurrentQr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/empty_qr"
                android:src="@drawable/ic_qash_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_qr"
                android:textAppearance="?android:textAppearanceMedium" />

        </LinearLayout>

    </FrameLayout>

    <ListView
        android:id="@+id/listCurrentBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>